--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Titre affiché dans la barre du navigateur</title>
+		<title>Hello : Titre affiché dans la barre du navigateur</title>
 	</head>
 	
 	<body>
