--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	</head>
 	
 	<body>
-		<h1>titre de niveau 1</h1>
-		<h2>titre de niveau 2</h2>
-		<h2>titre de niveau 3</h2>
+		<h1>- titre de niveau 1</h1>
+		<h2>- titre de niveau 2</h2>
+		<h2>- titre de niveau 3</h2>
 		<p>paragraphe 1</p>
 		<p>paragraphe 2</p>
 		<p>paragraphe 3</p>
