--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 		<h1>- titre de niveau 1</h1>
 		<h2>- titre de niveau 2</h2>
 		<h2>- titre de niveau 3</h2>
+		<h2>- titre de niveau 4</h2>
 		<p>paragraphe 1</p>
 		<p>paragraphe 2</p>
 		<p>paragraphe 3</p>
+		<p>paragraphe 4</p>
 		<ul>
 			<li>item 1</li>
 			<li>item 2</li>
 			<li>item 3</li>
+			<li>item 4</li>
 		</ul>
 	</body>
 </html>
